Update SpongeForge workspace